# library

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
src/agent_routers/: __init__.py  exceptions.py  logging.py  models.py  registry.py  router.py  rules.py
src/agent_routers/engines/: __init__.py  base.py  deterministic.py  langchain.py
tests/: test_router.py
